# zap-language-server

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml
crates/async-language-server/: Cargo.toml
crates/async-language-server/src/: document.rs  result.rs  serve.rs  server_trait.rs  server_with_state.rs  transport.rs  tree_sitter_utils.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: document.rs  lib.rs  result.rs  serve.rs  server_state.rs  server_trait.rs  server_with_documents.rs  server_with_state.rs  transport.rs  tree_sitter_utils.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  server.rs  tracing.rs
crates/server/src/cli/: serve.rs
crates/server/src/completions/: mod.rs  options.rs
crates/server/src/docs/: events.rs  mod.rs  options.rs
crates/server/src/hovers/: options.rs
crates/zap-documentation/: Cargo.toml
crates/zap-documentation/docs/events/: call.md  data.md  from.md  type.md
crates/zap-documentation/docs/functs/: args.md  call.md  rets.md
crates/zap-documentation/docs/keywords/: enum.md  event.md  funct.md  map.md  namespace.md  set.md  struct.md  type.md
crates/zap-documentation/docs/options/: async_lib.md  call_default.md  casing.md  client_output.md  disable_fire_all.md  manual_event_loop.md  remote_folder.md  remote_scope.md  tooling.md  tooling_output.md  tooling_show_internal_data.md  types_output.md  typescript.md  typescript_max_tuple_length.md  write_checks.md  yield_type.md
crates/zap-documentation/docs/primitives/: boolean.md  cframe.md  colors.md  datetime.md  float.md  instance.md  int_signed.md  int_unsigned.md  string.md  vectors.md
crates/zap-documentation/src/: lib.rs
crates/zap-formatter/: Cargo.toml
crates/zap-formatter/src/: lib.rs  result.rs  state.rs  utils.rs
crates/zap-formatter/src/basic/: comments.rs  declarations.rs  mod.rs  options.rs  plain.rs  unknown.rs
crates/zap-formatter/src/config/: indentation.rs  mod.rs
crates/zap-formatter/src/types/: array.rs  arrays.rs  enum_tagged.rs  enum_units.rs  enums.rs  maps.rs  mod.rs  primitives.rs  range.rs  ranges.rs  sets.rs  structs.rs  tuples.rs
crates/zap-formatter/src/types/enums/: mod.rs  tagged.rs  untagged.rs
crates/zap-language/: Cargo.toml
crates/zap-language-server/: Cargo.toml
crates/zap-language-server/src/: main.rs  server.rs  tracing.rs  utils.rs
crates/zap-language-server/src/cli/: fmt.rs  mod.rs  serve.rs
crates/zap-language-server/src/completions/: instances.rs  keywords.rs  mod.rs  namespaces.rs  options.rs  properties.rs  specifiers.rs  types.rs
crates/zap-language-server/src/definitions/: mod.rs  namespaces.rs  types.rs
crates/zap-language-server/src/diagnostics/: mod.rs
crates/zap-language-server/src/docs/: events.rs  functs.rs  keywords.rs  mod.rs
crates/zap-language-server/src/docs/definitions/: keywords.rs  mod.rs
crates/zap-language-server/src/hovers/: keywords.rs  mod.rs  options.rs  properties.rs  types.rs
crates/zap-language-server/src/references/: mod.rs  namespaces.rs  types.rs
crates/zap-language-server/src/renames/: mod.rs  namespaces.rs  types.rs
crates/zap-language-server/src/structs/: declared_namespace.rs  declared_type.rs  mod.rs  referenced_namespace.rs  referenced_type.rs
crates/zap-language/src/: constants.rs  diagnostics.rs  docs.rs  lib.rs  tree_sitter_utils.rs
crates/zap-language/src/docs/: mod.rs
crates/zap-language/src/docs/definitions/: classes.txt  functs.rs  keywords.rs  mod.rs  primitives.rs
editors/vscode/: .gitignore  .vscodeignore  bun.lockb  package.json  tsconfig.json
editors/vscode/src/: constants.ts  downloader.ts  extension.ts  platform.ts  server.ts  strings.ts
editors/vscode/src/server/: index.ts
editors/zed/: .gitignore  Cargo.toml  extension.toml
editors/zed/languages/zap/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  outline.scm
editors/zed/languages/zap/queries/: brackets.scm  highlights.scm  indents.scm
editors/zed/src/: constants.rs  extension.rs  fs.rs  github.rs  platform.rs  strings.rs
scripts/: fetch_roblox_classes.sh  get-version.sh  unpack-releases.sh  zip-release.sh
