[package]
name = "async-lsp-boilerplate"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "async_lsp_boilerplate"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
tree-sitter = ["dep:tree-sitter"]

[dependencies]
async-lsp = { version = "0.2.2", default-features = false, features = ["client-monitor", "omni-trait", "tracing"] }
dashmap = "6.1"
futures = "0.3"
ropey = "1.6"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tower = "0.5"
tree-sitter = { version = "0.25", optional = true }
