[package]
name = "zap-language-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "zap-language-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
async-lsp-boilerplate = { path = "../lsp" }

tokio = { version = "1.45", features = ["full"] }
