[package]
name = "zap-formatter"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "zap_formatter"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
thiserror = "2.0"
tree-sitter = "0.25"

zap-language = { path = "../zap-language" }

[dependencies.tree-sitter-zap]
git = "https://github.com/filiptibell/tree-sitter-zap"
rev = "9d168dacf3bc7c0549431824cd3f386c4343eb4c"
