[package]
name = "zap-language-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "zap-language-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }

tokio = { version = "1.45", features = ["rt", "fs", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

zap-language = { path = "../zap-language" }

[dependencies.async-language-server]
git = "https://github.com/filiptibell/async-language-server"
rev = "097eca136440ed9bd5d5de2d92b8a92dd2f23038"
features = ["tracing", "tree-sitter"]

[dependencies.tree-sitter-zap]
git = "https://github.com/filiptibell/tree-sitter-zap"
rev = "9d168dacf3bc7c0549431824cd3f386c4343eb4c"
