[package]
name = "zap-language-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "zap-language-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
fs-err = { version = "3.1", features = ["tokio"] }
similar = { version = "2.7", features = ["text", "inline", "bytes"] }

tokio = { version = "1.45", features = ["rt", "fs", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

zap-language = { path = "../zap-language" }
zap-formatter = { path = "../zap-formatter" }

[dependencies.async-language-server]
git = "https://github.com/filiptibell/async-language-server"
rev = "80ce3afcd3e0914fa5c6fff55d4d253e167ff561"
features = ["tracing", "tree-sitter"]
