[package]
name = "zap-language"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "zap_language"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies.tree-sitter]
version = "0.25"

[dependencies.tree-sitter-zap]
git = "https://github.com/filiptibell/tree-sitter-zap"
rev = "d7ea48f7ea6050eb67b1c7d28ab12672c9bcc1a2"
