[package]
name = "zap-language"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "zap_language"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
zap-documentation = { path = "../zap-documentation" }

[dependencies.tree-sitter]
version = "0.25"

[dependencies.tree-sitter-zap]
git = "https://github.com/filiptibell/tree-sitter-zap"
rev = "d61ffd523ade7b0a62a2645f31bf1c5a49d30a2c"
